<resources>
    <string name="app_name">RealtimeSenecApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_battery_detail">Battery Details</string>
    <string name="action_solar_detail">Solar Details</string>
    <string name="action_system_info">System Information</string>
    <string name="settings_title">Settings</string>
    <string name="settings_ip_label">SENEC Device IP Address</string>
    <string name="settings_ip_hint">Enter the local IP address of your SENEC device (e.g., 192.168.1.100)</string>
    <string name="settings_ip_placeholder">192.168.xxx.yyy</string>
    <string name="settings_save_button">Save</string>
    <string name="settings_saved">Settings saved successfully</string>
    <string name="error_ip_empty">IP address cannot be empty</string>
    <string name="error_ip_not_configured">Please configure your SENEC device IP address in settings</string>
    <string name="settings_ip_info">The app connects to your SENEC device on your local network. Make sure your device is connected to the same network.</string>
    <string name="unit_toggle_title">Unit Configuration</string>
    <string name="unit_toggle_label">Show values in Kilowatt</string>
    <string name="content_description_icons">icon</string>
    <string name="empty_text" translatable="false">-</string>
    <string name="unit_ampere" translatable="false">A</string>
    <string name="unit_degree_centigrade" translatable="false">°C</string>
    <string name="unit_hertz" translatable="false">Hz</string>
    <string name="unit_kilowatt" translatable="false">kW</string>
    <string name="unit_kilowatthour" translatable="false">kWh</string>
    <string name="unit_megawatt" translatable="false">MW</string>
    <string name="unit_megawatthour" translatable="false">MWh</string>
    <string name="unit_percent" translatable="false">%</string>
    <string name="unit_volt">V</string>
    <string name="unit_watt" translatable="false">W</string>
    <string name="unit_watthour" translatable="false">Wh</string>
    <string name="batt_type_name_0" translatable="false">Studer Xtender</string>
    <string name="batt_type_name_1" translatable="false">SenecBatt</string>
    <string name="batt_type_name_2" translatable="false">Senec.Inverter V2</string>
    <string name="batt_type_name_3" translatable="false">SENEC.Inverter V2.1</string>
    <string name="batt_type_name_4" translatable="false">SENEC.Inverter V3 LV</string>
    <string-array name="enfluri_name">
        <item>N/A</item>
        <item>METER - GRID:</item>
        <item>METER - CONSUMPTION:</item>
        <item>METER - GENERATION:</item>
    </string-array>
    <string name="info_label_AcActivePower">Active Power (W):</string>
    <string name="info_label_AcApparentPower">Apparent Power (VA):</string>
    <string name="info_label_AcReactivePower">Reactive Power (VAr):</string>
    <string name="info_label_Accu">Battery:</string>
    <string name="info_label_BattInverterType">Inverter-Type:</string>
    <string name="info_label_BatteryCurrent">Battery Current (A):</string>
    <string name="info_label_BatteryCurrentEach">Current (A) per Inverter:</string>
    <string name="info_label_BatteryPower">Battery Power (W):</string>
    <string name="info_label_BatteryVoltage">Battery Voltage (V):</string>
    <string name="info_label_CEIStatus">Status Grid Parameter Control (CEI)</string>
    <string name="info_label_CapacityTestValue">Capacity Test Res. (Wh):</string>
    <string name="info_label_Current">Current (A):</string>
    <string name="info_label_DurationCharge">Total Charge Duration (min):</string>
    <string name="info_label_ExportLimit">Export-Limit.:</string>
    <string name="info_label_FeatureCar">Charge-Station:</string>
    <string name="info_label_FeatureCloud">Senec.CLOUD:</string>
    <string name="info_label_FeatureEcoGrid">Econamic-Grid:</string>
    <string name="info_label_FeatureHeatBox">Heating-Element:</string>
    <string name="info_label_FeatureIsland">Backup Power Mode:</string>
    <string name="info_label_FeatureIslandPro">Backup Power Mode Pro:</string>
    <string name="info_label_FeaturePackage">Feature Packages:</string>
    <string name="info_label_FeaturePeakShaving">Peak-Shaving:</string>
    <string name="info_label_FeatureSGready">SG-Ready:</string>
    <string name="info_label_FeatureSHKW">Solarinvert SHKW:</string>
    <string name="info_label_FeatureSockets">Power-Sockets:</string>
    <string name="info_label_Frequency">Frequency (Hz):</string>
    <string name="info_label_FuelGauge">SoC (%):</string>
    <string name="info_label_Homeconsumption">House Consumption (W):</string>
    <string name="info_label_Inv1Temp">Inverter 1 Temp. (°C):</string>
    <string name="info_label_Inv2Temp">Inverter 2 Temp. (°C):</string>
    <string name="info_label_Inv3Temp">Inverter 3 Temp. (°C):</string>
    <string name="info_label_InverterPhase">Charge Phase:</string>
    <string name="info_label_IslandMode">Backup Power Mode:</string>
    <string name="info_label_LastMaintenance">Last Maintenance (d):</string>
    <string name="info_label_MACADDRESS">MAC-Address:</string>
    <string name="info_label_MCUID">Controller-SN:</string>
    <string name="info_label_MaxCapacity">Maximum Capacity (Ah):</string>
    <string name="info_label_NextState">Delayed State:</string>
    <string name="info_label_NoDesulfatCharge">Desulfonation Charges:</string>
    <string name="info_label_NoLiModule">LI-Module Count:</string>
    <string name="info_label_OperatingHours">Operating Hours (h):</string>
    <string name="info_label_PUConTotal">PU-Consumption (W):</string>
    <string name="info_label_PVGeneration">PV-Generation (W):</string>
    <string name="info_label_PVLimitL1">PV-Limitation L1 (%):</string>
    <string name="info_label_PVLimitL2">PV-Limitation L2 (%):</string>
    <string name="info_label_PVLimitL3">PV-Limitation L3 (%):</string>
    <string name="info_label_Power">Power (W):</string>
    <string name="info_label_PowerValues">Power Value:</string>
    <string name="info_label_PvInv">Int. PV Inverter:</string>
    <string name="info_label_PvInvVersions">Versions:</string>
    <string name="info_label_State">State:</string>
    <string name="info_label_System">System:</string>
    <string name="info_label_TimeRemainCharge">Rem. Charge (min):</string>
    <string name="info_label_TimeRemainEqual">Rem. Equalization (min):</string>
    <string name="info_label_TotalCharge">Total Charged Energy (kWh):</string>
    <string name="info_label_TotalPower">Total Power (W):</string>
    <string name="info_label_Type">Type:</string>
    <string name="info_label_UnbalancedLoadLimit">Powerskew-Limit:</string>
    <string name="info_label_Voltage">Voltage (V):</string>
    <string name="info_label_VoltageLimit">Low Voltage-Limit.:</string>
    <string name="info_label_WBConTotal">WB-Consumption (W):</string>
    <string name="info_label_revision_BDC">Revision BDC:</string>
    <string name="info_label_revision_GUI">Revision GUI:</string>
    <string name="info_label_revision_HMI">Revision HMI:</string>
    <string name="info_label_revision_INV">Revision INV:</string>
    <string name="info_label_revision_MCU">Revision MCU:</string>
    <string name="info_label_revision_MCUBL">Revision MCU-BL:</string>
    <string name="info_label_revision_NPU">Revision NPU-Regs:</string>
    <string name="info_label_revision_NPUImage">Revision NPU-Image:</string>
    <string name="info_label_revision_NSP">Revision NSP:</string>
    <string name="info_label_revision_PU">"Revision PU:</string>
    <string name="info_label_wallbox_state">Wallbox State:</string>
    <string name="info_label_wallbox_total_power">Wallbox Total Power (VA):</string>
    <string name="info_label_wallbox_current">Wallbox Current per Phase (A):</string>
    <string name="wallbox_current_value">%1$s, %2$s, %3$s</string>
    <string name="internal_mpp_MppCurrent">Current [A DC]</string>
    <string name="internal_mpp_MppPower">Power [W DC]</string>
    <string name="internal_mpp_MppVoltage">Voltage [V DC]</string>
    <string name="inverter_type_INV_HV" translatable="false">SENEC.Home V3 HV Inverter</string>
    <string name="inverter_type_INV_LV" translatable="false">SENEC.Home V3 LV Inverter</string>
    <string name="power_unit_status_0">Overcurrent</string>
    <string name="power_unit_status_1">Overtemperature</string>
    <string name="power_unit_status_2">Temperature value T1 faulty</string>
    <string name="power_unit_status_3">Temperature value Fehlerhaft T2 faulty</string>
    <string name="power_unit_status_9">Error power meter</string>
    <string name="power_unit_status_10">Connection Error</string>
    <string name="power_unit_status_11">Load-Detection Errorn</string>
    <string name="power_unit_status_12">Watertemperature too warm</string>
    <string name="power_unit_status_13">Hardware error</string>
    <string name="power_unit_status_14">Hardware temperature error</string>
    <string name="power_unit_status_15">Watertemperature too low</string>
    <string name="power_unit_status_16">Sensorcount error</string>
    <string name="power_unit_status_17">Main switch Off</string>
    <string name="status_battery_charge">Charge Battery</string>
    <string name="status_battery_discharge">Discharge Battery</string>
    <string name="status_grid_export">Export to Grid</string>
    <string name="status_grid_import">Import from Grid</string>
    <string name="status_home_consumption">Home-Consumption</string>
    <string name="status_pv_generated">PV-Generation</string>
    <string name="status_pv_generated_east">Ost</string>
    <string name="status_pv_generated_west">West</string>
    <string name="battery_detail_status">Status</string>
    <string name="battery_detail_values">Battery Values</string>
    <string name="battery_detail_state">Status</string>
    <string name="battery_detail_power">Power</string>
    <string name="battery_detail_voltage">Voltage</string>
    <string name="battery_detail_current">Current</string>
    <string name="battery_detail_soc">State of Charge</string>
    <string name="battery_detail_error">Failed to load battery data</string>
</resources>